--- a/public/styles.css
+++ b/public/styles.css
@@ -8,6 +8,20 @@
     --circwidth: 20px;
   }
 
+  @font-face {
+    font-family: ams;
+    src: url(/AmstelvarAlpha-VF.ttf);
+  }
+
+  @font-face {
+    font-family: meri;
+    src: url(/Merriweather-Regular.ttf);
+  }
+  @font-face {
+    font-family: meriL;
+    src: url(/Merriweather-Light.ttf);
+  }
+
 *{
     margin: 0;
     padding: 0;
@@ -43,6 +57,39 @@ header:after {
     width: 100%;
     height: calc(var(--borderspace)*2);
 }
+h1{
+    color: white;
+    font-family: meriL,  'Times New Roman', Times, serif;
+}
+
+/* navbar */
+nav{
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    justify-content: space-between;
+    top: 25%;
+
+}
+
+nav ul{
+    display: flex;
+    justify-content: space-between;
+    margin-right: 3%;
+    flex-basis: 200px;
+    list-style-type: none;
+}
+nav ul li{
+    margin-right: 2%;
+
+}
+nav ul span{
+    color: white;
+
+}
+
+
 /* game container */
 .container{
     position: fixed;
@@ -91,14 +138,18 @@ height: 100%;
 .headline {
     position: absolute;
     width: 60%;
-    height: 68%;
+    height: auto;
     left: 20%;
     z-index: 1000;
     margin-top: 3rem;
 }
 
 .headlinetext{
+    font-family: ams, Georgia, 'Times New Roman', Times, serif;
+    font-variation-settings: 'wght' 625, 'wdth' 100;
+    line-height: 1.4em;
     font-size: 2em;
+    letter-spacing: 0px;
     color: #111;
 }
 
