--- a/public/styles.css
+++ b/public/styles.css
@@ -4,6 +4,11 @@
     --blue: #529ADC;
     --red: #f44336;
     --white: #ffffff;
+    --darkgrey: #cecece;
+    --lightgrey: #f3f3f3;
+    --yellow: rgb(255, 235, 122);
+    --orange: hsl(26,91%,60%);
+    --green: #74db4f;
     --borderspace: 16px;
     --circwidth: 20px;
   }
@@ -89,6 +94,55 @@ nav ul span{
 
 }
 
+/* SIGN IN */
+.signbox{
+    display: grid;
+    position: absolute;
+    z-index: 9001;
+    right: 1%;
+    top:60%;
+    grid-template-columns: 2;
+    background-color: var(--lightgrey);
+    padding: 0.5rem;
+    border-radius: 0.4rem;
+    border-width: 3px;
+    border-style: solid;
+    border-color: var(--darkgrey);
+     box-shadow:0px 0px 10px 0px rgba(0, 0, 0, 0.27);
+     transition: transform 300ms ease-out;
+     transform: scale(0.0);
+     transform-origin: top right;
+     justify-content: center;
+     text-align: center;
+}
+.signbox h3{
+grid-column-start: 1;
+grid-column-end: 3;
+font-family: ams, Georgia, 'Times New Roman', Times, serif;
+
+}
+.signbox button{
+    border: none;
+    font-size: 1.4rem;
+    height: 2rem;
+    font-family:  Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    border-radius: 0.8rem;
+    padding: 0.1rem 2rem;
+    margin: 0.8rem 0.3rem 0.3rem 0.3rem;
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+.signup{
+    background-color: var(--blue);
+    color: var(--white);
+}
+.signin{
+    background-color: var(--darkgrey);
+    color: black;
+}
+
 
 /* game container */
 .container{
@@ -133,6 +187,10 @@ height: 100%;
     z-index: 1000;
 }
 
+.scissors{
+    cursor: pointer;
+}
+
 
 /* Headline */
 .headline {
@@ -151,6 +209,31 @@ height: 100%;
     font-size: 2em;
     letter-spacing: 0px;
     color: #111;
+}
+
+/* Streak counter */
+
+.scorecircle{
+    position: absolute;
+    top: 1%;
+    right: 7vw;
+    width: 3rem;
+    height: 3rem;
+    background-color: var(--blue);
+    z-index: 900;
+    border-radius: 50%;
+    border-width: 2px;
+    border-color: var(--lightgrey);
+    border-style: dotted;
+    display: grid;
+    place-content: center;
+    
+
+}
+.scorecircle div{
+    font-size: 1.5em;
+    font-family: Impact,  'Arial Narrow Bold', sans-serif;
+    color: var(--lightgrey)
 }
 
 /* Buttons */
@@ -185,4 +268,23 @@ height: 100%;
     border-radius: 1em;
     background: none;
     border: none;
+}
+
+
+/* FLYING SCORES */
+
+.flyer{
+    position: absolute;
+    left: 20%;
+    bottom:25%;
+    z-index: 3000;
+    font-size: 1.5rem;
+    transition: translate 5s, opacity 5s;
+
+}
+.plusone{
+    color: greenyellow;
+}
+.negone{
+    color: red;
 }
