--- a/public/styles.css
+++ b/public/styles.css
@@ -278,12 +278,13 @@ height: 100%;
 /* FLYING SCORES */
 
 .flyer{
+    display:block;
     position: absolute;
-    left: 20%;
-    bottom:25%;
+    left: 14%;
+    bottom:20%;
     z-index: 3000;
     font-size: 1.5rem;
-    transition: translate 5s, opacity 5s;
+    transition: 2000ms ease-out;
 
 }
 .plusone{
@@ -291,4 +292,28 @@ height: 100%;
 }
 .negone{
     color: red;
+}
+
+/* saved to articles message */
+.added{
+    position: absolute;
+    bottom:30%;
+    width: 60%;
+    left:20%;
+    padding: 0.3em 0px;
+    z-index: 4000;
+    display: none;
+    place-content: center;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.27);
+    border-radius: 0.4em;
+    transition: opacity 500ms;
+}
+
+.added p{
+    font-size: 1.2;
+    font-family: meri, Verdana, Geneva, Tahoma, sans-serif;
+    color: white;
+    opacity: 0.5;
+
 }
