--- a/public/rank.css
+++ b/public/rank.css
@@ -1,7 +1,6 @@
 
 
 .game{
-    padding-left: 1rem;
     overflow: scroll;
     -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
@@ -9,6 +8,33 @@
 .game::-webkit-scrollbar {
     display: none;
   }
+.paperbox{
+  display: flex;
+  justify-content: left;
+}
+
+  .paperbox button{
+    border: none;
+    font-size: 1.4rem;
+    height: 2rem;
+    font-family:  Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    border-radius: 0.8rem;
+    padding: 0.1rem 2rem;
+    margin: 0.8rem 0.3rem 0.3rem 0.3rem;
+    text-transform: uppercase;
+    cursor: pointer;
+    outline: none;
+}
+
+.tclicked{
+  background-color: var(--blue);
+  color: var(--white);
+}
+.tnotclicked{
+  background-color: var(--darkgrey);
+  color: black;
+}
 
 table {
     counter-reset: rowNumber;
